# OpenSRF

./: .gitignore  COPYING  ChangeLog  LICENSE.txt  Makefile  Makefile.am  README  README.websockets  autogen.sh  config.h.in  configure  configure.ac  install.conf  version.m4
doc/: Application-HOWTO.txt  Bundling-and-Chunking.txt  Dispatch-Mode-for-Subrequests.txt  OpenSRF-Messaging-Protocol.html  RELEASE_NOTES.txt  TZ-handling.txt  dokuwiki-doc-stubber.pl  dokuwiki-doc-stubber.pl.in
examples/: buildbot.cfg  fieldmapper2perl.xsl  math_bench.pl  math_bench.pl.in  math_client.py  math_client.py.in  math_client_curl.sh  multisession-test.pl  multisession-test.pl.in  opensrf-rsyslog.conf  opensrf.xml.example  opensrf_core.xml.example  redis-accounts.txt.example.in  simple_text.py.in  simple_text_curl.sh  srfsh.xml.example  websocketd-osrf.service.example
examples/apache2/: opensrf  opensrf.conf  websockets.conf
examples/haproxy/: osrf-ws-http-proxy
src/: Makefile  Makefile.am
src/c-apps/: Makefile  Makefile.am  format_json.c  osrf_cslow.c  osrf_dbmath.c  osrf_math.c  osrf_version.c  timejson.c
src/extras/: Makefile.install  docgen.xsl  timer.pl
src/gateway/: Makefile  Makefile.am  apachetools.c  apachetools.h  osrf_http_translator.c  osrf_json_gateway.c  osrf_websocket_translator.c
src/java/: Makefile  Makefile.am  Makefile.in  deps.inc  deps.sh
src/java/org/opensrf/: ClientSession.java  Message.java  MultiSession.java  Request.java  Session.java  Stack.java  Sys.java
src/java/org/opensrf/net/http/: GatewayRequest.java  HttpConnection.java  HttpRequest.java  HttpRequestHandler.java
src/java/org/opensrf/net/xmpp/: XMPPReader.java  XMPPSession.java
src/java/org/opensrf/test/: TestClient.java  TestGateway.java  TestLog.java  TestMultiSession.java  TestThread.java  TestXMLTransformer.java
src/java/org/opensrf/util/: Config.java  Logger.java  OSRFObject.java  SettingsClient.java  XMLFlattener.java  XMLTransformer.java
src/javascript/: DojoSRF.js  JSON_v0.js  JSON_v1.js  JSON_wrapper.js  OpenSRF.js  opensrf.js  opensrf_ws.js  opensrf_ws.js.in  opensrf_ws_shared.js  opensrf_ws_shared.js.in  opensrf_xhr.js  opensrf_xmpp.js
src/javascript/tests/: README  module.js  testJSON_v1.js
src/jserver/: Makefile  Makefile.am  osrf_chat.c  osrf_chat.h
src/libopensrf/: Makefile  Makefile.am  Makefile.json  basic_client.c  component.c  jsonpush.c  log.c  md5.c  opensrf.c  osrfConfig.c  osrf_app_session.c  osrf_application.c  osrf_big_hash.c  osrf_big_list.c  osrf_cache.c  osrf_digest.c  osrf_hash.c  osrf_json_object.c  osrf_json_parser.c  osrf_json_test.c  osrf_json_tools.c  osrf_json_xml.c  osrf_legacy_json.c  osrf_list.c  osrf_message.c  osrf_parse_json.c  osrf_prefork.c  osrf_settings.c  osrf_stack.c  osrf_system.c  osrf_transgroup.c  osrf_utf8.c  sha.c  socket_bundle.c  string_array.c  transport_client.c  transport_connection.c  transport_message.c  transport_session.c  utils.c  (+1 more)
src/libstack/: opensrf.c  osrfConfig.c  osrf_settings.c  osrf_system.c
src/libtransport/: transport_session.c
src/objson/: Makefile  Makefile.am  config.h.in  configure.ac  json2xml.c  json2xml.h  json_parser.c  json_parser.h  object.c  object.h  objson_test.c  xml2json.c  xml2json.h
src/perl/: Build.PL  Changes  MANIFEST  Makefile.PL  Makefile.am  README
src/perl/lib/: OpenSRF.pm
src/perl/lib/OpenSRF/: AppSession.pm  Application.pm  EX.pm  MultiSession.pm  Server.pm  System.pm  Transport.pm  UnixServer.pm  Utils.pm
src/perl/lib/OpenSRF/Application/: Persist.pm  Settings.pm  Slooooooow.pm  Validator.pm
src/perl/lib/OpenSRF/Application/Demo/: Math.pm  MathDB.pm  SimpleText.pm
src/perl/lib/OpenSRF/Application/Validator/: Base.pm  Invalid.pm
src/perl/lib/OpenSRF/Application/Validator/EmailAddress/: DNS.pm  Regex.pm
src/perl/lib/OpenSRF/DomainObject/: oilsMessage.pm  oilsMethod.pm  oilsResponse.pm
src/perl/lib/OpenSRF/Transport/: Listener.pm  PeerHandle.pm  SlimJabber.pm
src/perl/lib/OpenSRF/Transport/Redis/: BusConnection.pm  Client.pm  Message.pm  PeerConnection.pm
src/perl/lib/OpenSRF/Transport/SlimJabber/: Client.pm  Inbound.pm  PeerConnection.pm  XMPPMessage.pm  XMPPReader.pm
src/perl/lib/OpenSRF/Utils/: Cache.pm  Config.pm  JSON.pm  Logger.pm  SettingsClient.pm  SettingsParser.pm
src/perl/t/: 00-load.t  01-Application.t  02-AppSession.t  03-DomainObject.t  04-EX.t  05-MultiSession.t  07-Transport.t  08-Server.t  08-UnixServer.t  09-Utils-Cache.t  09-Utils-Config.t  09-Utils-JSON.t  09-Utils-LogServer.t  09-Utils-Logger.t  09-Utils-SettingsClient.t  09-Utils-SettingsParser.t  09-Utils-interval_to_seconds.t  09-Utils.t  boilerplate.t  pod-coverage.t
src/perlmods/: OpenSRF.pm
src/perlmods/OpenSRF/: AppSession.pm  Application.pm  EX.pm  System.pm  Transport.pm  UnixServer.pm
src/perlmods/OpenSRF/Application/Demo/: Math.pm  MathDB.pm
src/perlmods/OpenSRF/DomainObject/: oilsMessage.pm  oilsResponse.pm
src/perlmods/OpenSRF/Transport/SlimJabber/: Client.pm  Inbound.pm  MessageWrapper.pm  PeerConnection.pm  XMPPReader.pm
src/perlmods/OpenSRF/Utils/: Cache.pm  Config.pm  JSON.pm  Logger.pm
src/ports/strn_compat/: strndup.h  strnlen.h
src/python/: Makefile  Makefile.am  Makefile.in  opensrf.py  opensrf.py.in  setup.py  setup.py.in  srfsh.py
src/python/osrf/: app.py  cache.py  conf.py  const.py  ex.py  gateway.py  http_translator.py  json.py  log.py  net.py  net_obj.py  server.py  ses.py  set.py  stack.py  system.py  utils.py  xml_obj.py
src/python/osrf/apps/: example.py
src/python/tests/: json_test.py  net_obj_test.py  test_coverage.py  testobj.py
src/router/: Makefile.am  osrf_router.c  osrf_router.h  osrf_router_main.c
src/srfsh/: Makefile  Makefile.am  srfsh.c  srfsh.h
src/utils/: log.c  log.h  socket_bundle.c  socket_bundle.h  utils.c  utils.h  xml_utils.c
src/websocket-stdio/: Makefile.am  osrf-websocket-stdio.c  test-stateful.pl  tester.pl
tests/: Makefile.am  check_osrf_json_object.c  check_osrf_list.c  check_osrf_message.c  check_osrf_stack.c  check_osrf_utils.c  check_transport_client.c  check_transport_message.c
(+65 files in other folders)
